fixed navbar, image size, text size and spacing

--- a/ReviewSite/wwwroot/Shared.css
+++ b/ReviewSite/wwwroot/Shared.css
@@ -27,7 +27,7 @@ body {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     position: fixed;
     height: 10rem;
@@ -41,20 +41,25 @@ header {
 
 .navbar {
     font-size: 2rem;
-    text-transform: capitalize;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    color: transparent;
 }
 
     .navbar li {
-        display: inline-flex;
         margin: 0 10rem;
-
     }
 
     
         .logo {
             max-width: 250px;
+            margin-left: 100px;
+            margin-right: 25vw;
             float: left;
             flex-grow: 1;
+            
         }
 
 
@@ -82,7 +87,7 @@ header {
         .navbar li a {
             position: relative;
             text-decoration: none;
-            font-size: 6rem;
+            font-size: 5rem;
             color: #ffffff;
             border-bottom: 4px solid #2680C2;
             transition: 0.4s ease;
